<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/item_home"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/item_favorites" />
    <item
        android:id="@+id/questions"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/item_add"/>
    <item
        android:id="@+id/notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/item_notifications"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/item_profile"/>
</menu>