<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="ru.lansonz.dayquestion.ui.fragment.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup"
        tools:context="ru.lansonz.dayquestion.ui.fragment.signUp.SignUpFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/mainTextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bottom_container"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_none"
                android:hint="@string/fullName"
                android:inputType="text"
                android:paddingVertical="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:maxLength="24"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bottom_container"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/fullNameLayout"
            app:layout_constraintStart_toStartOf="@+id/fullNameLayout"
            app:layout_constraintTop_toBottomOf="@id/fullNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_none"
                android:hint="@string/email"
                android:maxLength="24"
                android:inputType="textEmailAddress"
                android:paddingVertical="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bottom_container"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_none"
                android:hint="@string/password"
                android:maxLength="32"
                android:inputType="textPassword"
                android:paddingVertical="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_blue"
            android:enabled="@{signUpViewModel.buttonEnabled}"
            android:onClick="@{()->signUpViewModel.forwardNavigating()}"
            android:text="@string/forward"
            android:textAllCaps="false"
            android:textColor="@color/mainBgColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <Button
            android:id="@+id/btnBack"
            style="@style/NoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="@{signUpViewModel.buttonEnabled}"
            android:onClick="@{()->signUpViewModel.backNavigating()}"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/subTextColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
