<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="ru.lansonz.dayquestion.ui.fragment.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        tools:context="ru.lansonz.dayquestion.ui.fragment.login.LoginFragment">

        <FrameLayout
            android:id="@+id/frameLayout2"
            hideIfFalse="@{loginViewModel.progress}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#1A525050"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/auth"
            android:textColor="@color/mainTextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <Button
                android:id="@+id/googleSignIn"
                style="@style/SecondaryButton"
                app:backgroundTint="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/google"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/subTextColor"
                app:icon="@drawable/google_logo"
                app:iconTint="@null" />

            <Button
                android:id="@+id/vkSignIn"
                style="@style/SecondaryButton"
                app:backgroundTint="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/vk"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/subTextColor"
                app:icon="@drawable/vk_logo"
                app:iconTint="@null" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bottom_container"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_none"
                android:imeOptions="actionNext"
                android:paddingVertical="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_container"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_none"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingVertical="2dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/subTextColor"
            android:onClick="@{()-> loginViewModel.navigateToRecovery()}"
            app:layout_constraintEnd_toEndOf="@+id/tvPassword"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="@{loginViewModel.buttonEnabled}"
            android:onClick="@{()-> loginViewModel.login()}"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@+id/tvPassword"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:id="@+id/regNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Нет аккаунта?"
                android:textColor="@color/subTextColor" />

            <Button
                android:id="@+id/regClick"
                style="@style/NoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="@{()-> loginViewModel.navigateToSignUp()}"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
