<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="ru.lansonz.dayquestion.ui.fragment.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        tools:context="ru.lansonz.dayquestion.ui.fragment.signUp.SignUpAvatar">

        <FrameLayout
            android:id="@+id/frameLayout2"
            hideIfFalse="@{!signUpViewModel.buttonEnabled}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#1A525050"
            android:clickable="true"
            android:elevation="7dp"
            android:focusable="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorAccent" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/mainTextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ciAvatar"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/selectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="@id/ciAvatar"
            app:layout_constraintEnd_toEndOf="@id/ciAvatar"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/photo_choose"
            android:textColor="@color/subTextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/ciAvatar" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="или загрузите позже"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="220dp"
            android:background="@drawable/btn_blue"
            android:enabled="@{signUpViewModel.buttonEnabled}"
            android:onClick="@{()->signUpViewModel.createUser()}"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/mainBgColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>